--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon" href="snake.gif" type="image/gif">
+        <link rel="icon" href="snakee.png" type="image/gif">
 </head>
 <body>
     <div id="gameArea">
